[project]
name = "ogcrl"
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = [
    "chex==0.1.87",
    "distrax==0.1.5",
    "dm-control==1.0.27",
    "flax==0.9.0",
    "gym==0.24.1",
    "gymnasium==1.0.0",
    "lockfile==0.12.2",
    "matplotlib==3.9.2",
    "ml-collections==0.1.1",
    "moviepy==1.0.3",
    "optax==0.2.2",
    "shapely==2.0.6",
    "shimmy>=0.2.1",
    "wandb>=0.19.11",
    "jax==0.4.28",
    "jaxlib==0.4.28+cuda12.cudnn89; platform_system == 'Linux'",
    "nvidia-cudnn-cu11>=8.9,<9.0; platform_system == 'Linux'",
    "nvidia-cuda-cupti-cu12>=12.4; platform_system == 'Linux'",
    "nvidia-cusolver-cu12>=11.7.3.90; platform_system == 'Linux'",
    "jaxlib==0.4.28; platform_system == 'Darwin'",
]

[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
py-modules = [ "main" ]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.uv]
find-links = [ "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html" ]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

